--- a/.github/workflows/app-build.yaml
+++ b/.github/workflows/app-build.yaml
@@ -37,6 +37,7 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      - run: ls -lrta .
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
