--- a/.github/workflows/app-build.yaml
+++ b/.github/workflows/app-build.yaml
@@ -26,6 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: backend-binary-build
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/download-artifact@master
         with:
           name: backend-binary
