--- a/.github/workflows/app-build.yaml
+++ b/.github/workflows/app-build.yaml
@@ -1,14 +1,10 @@
 name: Application Build
 on:
-  push:
-    branches:
-      - main
-      - development
-      - feature/*
-  pull_request_target:
-    branches:
-      - main
-      - development
+  workflow_run:
+    workflows:
+      - Backend Go Test
+  workflow_dispatch:
+
 jobs:
   backend-binary-build:
     runs-on: ubuntu-latest
@@ -18,10 +14,12 @@ jobs:
         with:
           go-version: '^1.20.6'
       - run: go build -o app
+        working-directory: backend
       - uses: actions/upload-artifact@master
         with:
           name: backend-binary
-          path: ./app
+          path: ./backend/app
+
   backend-docker-build:
     runs-on: ubuntu-latest
     needs: backend-binary-build
@@ -30,7 +28,7 @@ jobs:
       - uses: actions/download-artifact@master
         with:
           name: backend-binary
-          path: ./app
+          path: ./backend/app
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -38,11 +36,10 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - run: ls -lrta .
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: .
+          context: ./backend
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/japp:latest
