--- a/.github/workflows/backend-test.yaml
+++ b/.github/workflows/backend-test.yaml
@@ -3,11 +3,15 @@ on:
   push:
     branches:
       - main
-      - development
+    paths: 
+      - .github/workflows/backend-test.yaml
+      - backend/**
   pull_request:
     branches:
       - main
-      - development
+    paths: 
+      - .github/workflows/backend-test.yaml
+      - backend/**
 env:
   MARIADB_DATABASE: test_db
   MARIADB_USER: test_user
