--- a/.github/workflows/database.yaml
+++ b/.github/workflows/database.yaml
@@ -36,7 +36,8 @@ jobs:
           mysql password: $MARIADB_PASSWORD
       - name: "Checkout"
         uses: actions/checkout@v3
-      - uses: ./.github/actions/flyway
+      - name: "Flyway"
+        uses: ./.github/actions/flyway
         with: 
           host: localhost
           port: 3306
